[package]
name = "reshape_helper"
version = "0.1.1"
edition = "2021"
description = "Helper library for Reshape"
homepage = "https://github.com/fabianlindfors/reshape-helper"
documentation = "https://github.com/fabianlindfors/reshape-helper"
repository = "https://github.com/fabianlindfors/reshape-helper"
license = "MIT"
keywords = ["postgres", "migrations"]
authors = ["Fabian Lindfors"]

[lib]
proc-macro = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
quote = "1.0.18"
darling = "0.14.0"
syn = "1.0.91"
lexical-sort = "0.3.1"